--- a/Day01_htmlBaslangic/index.html
+++ b/Day01_htmlBaslangic/index.html
@@ -16,7 +16,7 @@ Bu sekilde stillendirmelere Inline CSS denilir. -->
     <h4 style="font-size:25px; color: red;">Java</h4> 
     <!-- Font size yazi boyutunu buyuttu, yaninada color ile renk ekledim -->
 
-    <br> <!-- "br" bir satir bosluk konulmasini sagliyor -->
+    <br> <!-- "br" bir satir bosluk konulmasini sagliyor. -->
     <p>Arada bosluk var "br" tag'i kullandim</p>
     <br>
 
