--- a/Day03_htmlCSS2/index.html
+++ b/Day03_htmlCSS2/index.html
@@ -14,7 +14,7 @@
     <p>th tag'i baslik hucresi olusturmak icin kullanilir</p>
     <table class="tablo"> 
         <!-- Style yapmak icin genellikle class tercih edilir. 
-            Style'i "css" klasorunde olusturup oradan cekecegiz-->
+            Style'i "css" klasorunde olusturup oradan cekecegiz.-->
         <tr>
             <th>Urun id</th>
             <th>urun adi</th>
