--- a/Day03_htmlCSS3/index.html
+++ b/Day03_htmlCSS3/index.html
@@ -37,7 +37,7 @@
     <label class="label" for="sayi">Yasiniz:</label>
     <input class="input" id="sayi" type="number" 
     max="100" min="0" name="yas" /> <br />   
-    <!-- max, min girilebilecek en buyuk degerleri belirler -->
+    <!-- max, min girilebilecek en buyuk degerleri belirler. -->
     <!-- name yazdigimizda kullanicinin girdigi degeri sunucuya name adi altinda gonderir.
             yas = 25 olarak gidecek ornek olarak -->
 
