--- a/Day04_htmlCSS4/anasayfa-semantik.html
+++ b/Day04_htmlCSS4/anasayfa-semantik.html
@@ -16,7 +16,7 @@
 
     <!-- DIGER ANASAYFADAN NE FARKI VAR ? -->
     <!-- Orada tag'leri div olarak kullandik. Burada ise hangi tag hangisine uygun ise onu kullandik
-        Peki ne farketti ? Hic bir sey farketmedi sadece baska bakan birileri icin tag'ler anlamlasmis
-        oldu. Bu sayede daha anlasilir bir yapi elde ettik.-->
+        Peki ne farketti ? Hicbir sey farketmedi sadece kodlarimiza bakan baskalari 
+        icin tag'ler daha anlasilir hale gelmis oldu. Bu sayede daha anlasilir bir yapi elde ettik.-->
 </body>
 </html>
