--- a/Day04_htmlCSS4/index.html
+++ b/Day04_htmlCSS4/index.html
@@ -20,6 +20,8 @@
         <img src="img/f9ca41eb0e90fced2179dd482968f130.jpg" alt="">
         <img src="img/f9ca41eb0e90fced2179dd482968f130.jpg" alt="">
         <img src="img/f9ca41eb0e90fced2179dd482968f130.jpg" alt="">
+        <img src="img/f9ca41eb0e90fced2179dd482968f130.jpg" alt="">
+        <img src="img/f9ca41eb0e90fced2179dd482968f130.jpg" alt="">
     </div>
 
     <div class="kutu orta">
@@ -44,8 +46,8 @@
         <div class="alt"></div>
         <div class="alt"></div>
     </div>
-    <!-- div.kutu>div.alt*3
-    > icerisine girmek icin kullaniliyor. class'i alt olan 3 tane div olusturalimin kisa yolu -->
+    <!-- div.kutu>div.alt*3> 
+        icerisine girmek icin kullaniliyor. class'i alt olan 3 tane div olusturalimin kisa yolu -->
 
     <div class="kutu1 sari">Sari</div>
     <div class="kutu1 yesil">Yesil</div>
